--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 <script
   src="https://unpkg.com/react-dom@16/umd/react-dom.development.js">
 </script>
-<script>
-  // Our code will go here
-  const appRoot = document.querySelector('#application-root')
-
-	const helloWorldH1 = React.createElement('h1', null, 'Hello, world!');
-
-	ReactDOM.render(helloWorldH1, appRoot);  
-
-
+<script
+  src="https://unpkg.com/babel-standalone@6/babel.min.js"
+  crossorigin>
 </script>
+<script type="text/babel">
+  ReactDOM.render(
+    <div>
+      <h1>Hello, world!</h1>
+      <p>How are you today?</p>
+      <h2>Look what React can do!</h2>
+    </div>,
+    document.querySelector('#application-root')
+  );
+</script>
+
 </body>
 </html>
