--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
   crossorigin>
 </script>
 <script type="text/babel">
-  ReactDOM.render(
-    <div>
-      <h1>Hello, world!</h1>
-      <p>How are you today?</p>
-      <h2>Look what React can do!</h2>
-    </div>,
-    document.querySelector('#application-root')
+function App() {
+  return (
+    <span id='app-id' className='app-class'>
+      My App
+    </span>
   );
+}
+
+ReactDOM.render(
+  <App />,
+  document.querySelector('#application-root')
+);
 </script>
 
 </body>
